# devops-with-kuubernetes-part1

ex1.01/log-output/: Containerfile
ex1.01/log-output/src/: main.rs
log-output/: Cargo.toml  Containerfile
log-output/log-output-generate/: Cargo.toml  Containerfile
log-output/log-output-generate/src/: main.rs
log-output/log-output-view/: Cargo.toml  Containerfile
log-output/log-output-view/src/: main.rs
log-output/manifests/: deployment.yaml  ping-pong-pvc.yaml
log-output/src/: main.rs
ping-pong/: Cargo.toml  Containerfile
ping-pong/manifests/: deployment.yaml
ping-pong/src/: main.rs
todo-app/: Cargo.toml  Containerfile
todo-app/manifests/: deployment.yaml  image-volume-claim.yaml
todo-app/src/: main.rs
todo-app/templates/: index.html
volumes/: persistentvolume.yaml
